--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.erudika</groupId>
+	<groupId>org.zoomba-lang</groupId>
 	<artifactId>lucene-s3directory</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
@@ -25,6 +25,15 @@
 				<picUrl>http://0.gravatar.com/avatar/5aee63b92a66153f25798ad494255b33</picUrl>
 			</properties>
 		</developer>
+		<developer>
+			<id>nmondal</id>
+			<name>Nabarun Mondal</name>
+			<email>nabarun.mondal@gmail.com</email>
+			<url>https://github.com/nmondal</url>
+			<roles>
+				<role>developer</role>
+			</roles>
+		</developer>
 	</developers>
 
 	<properties>
@@ -32,12 +41,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<skipTests>false</skipTests>
-		<lucene.version>9.0.0</lucene.version>
-		<slf4j.version>1.7.32</slf4j.version>
-		<junit.version>4.12</junit.version>
-		<mockito.version>1.10.19</mockito.version>
-		<log4j.version>2.17.0</log4j.version>
-		<awssdk.version>2.17.113</awssdk.version>
+		<lucene.version>9.11.1</lucene.version>
+		<slf4j.version>2.1.0-alpha1</slf4j.version>
+		<junit.version>4.13.2</junit.version>
+		<mockito.version>5.13.0</mockito.version>
+		<log4j.version>3.0.0-beta2</log4j.version>
+		<awssdk.version>2.28.10</awssdk.version>
 	</properties>
 
 	<dependencies>
@@ -65,7 +74,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -99,12 +108,6 @@
 			<version>${lucene.version}</version>
 			<!--<scope>test</scope>-->
 		</dependency>
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>s3</artifactId>
-			<version>2.24.9</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
